# AegisProxy

./: .gitignore  README.md  TESTING.md  docker-compose.yml  test_proxy.py
backend/: .env.example  README.md  debug_settings.py  debug_startup.py  error.txt  error_minimal.txt  error_notype.txt  pyproject.toml  redaction_debug_error.txt  verification_results.txt  verify_filters.py  verify_filters_clean.py  verify_output.txt
backend/src/aegis/: __init__.py  config.py  main.py
backend/src/aegis/api/: __init__.py  dashboard.py  dependencies.py  router.py  schemas.py
backend/src/aegis/filters/: __init__.py  base.py  pipeline.py
backend/src/aegis/filters/injection/: __init__.py  filter.py  heuristics.py  patterns.py
backend/src/aegis/filters/pii/: __init__.py  analyzer.py  filter.py  recognizers.py
backend/src/aegis/filters/redaction/: __init__.py  engine.py  filter.py
backend/src/aegis/proxy/: __init__.py  handler.py  streaming.py
backend/src/aegis/proxy/providers/: base.py  openai.py
backend/src/aegis/telemetry/: __init__.py  events.py  logger.py  metrics.py  stats.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx
frontend/src/services/: api.ts
